--- a/Resources/Prototypes/Entities/Objects/Boxes/boxes_food.yml
+++ b/Resources/Prototypes/Entities/Objects/Boxes/boxes_food.yml
@@ -2,7 +2,7 @@
   name: donkpocket box
   parent: BoxBase
   id: BoxDonkpocket
-  description: 'Instructions: Heat in microwave. Product will cool if not eaten within seven minutes.'
+  description:
   components:
   - type: StorageFill
     contents:
