--- a/Resources/Prototypes/Entities/Objects/Boxes/boxes_general.yml
+++ b/Resources/Prototypes/Entities/Objects/Boxes/boxes_general.yml
@@ -2,7 +2,7 @@
   name: lightbulb box
   parent: BoxBase
   id: BoxLightbulb
-  description: This box is shaped on the inside so that only light tubes and bulbs fit.
+  description:
   components:
   - type: StorageFill
     contents:
@@ -18,7 +18,7 @@
   name: lighttube box
   parent: BoxBase
   id: BoxLighttube
-  description: This box is shaped on the inside so that only light tubes and bulbs fit.
+  description:
   components:
   - type: StorageFill
     contents:
@@ -34,7 +34,7 @@
   name: mixed lights box
   parent: BoxBase
   id: BoxLightMixed
-  description: This box is shaped on the inside so that only light tubes and bulbs fit.
+  description:
   components:
   - type: StorageFill
     contents:
@@ -50,7 +50,7 @@
   name: pda box
   parent: BoxBase
   id: BoxPDA
-  description: A box of spare PDA microcomputers.
+  description:
   components:
   - type: StorageFill
     contents:
@@ -68,7 +68,7 @@
   name: meson box
   parent: BoxBase
   id: BoxMesonScanners
-  description: A box of spare meson goggles.
+  description:
   components:
   - type: StorageFill
     contents:
@@ -86,7 +86,7 @@
   name: survival box
   parent: BoxBase
   id: BoxSurvival
-  description: It's box with basic internals inside.
+  description:
   components:
   - type: StorageFill
     contents:
